--- a/backend/package.json
+++ b/backend/package.json
@@ -16,6 +16,7 @@
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.1.0",
+    "nodemon": "^3.1.9",
     "zod": "^3.22.4"
   }
 }
